--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -22,6 +22,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: scr/Dockerfile
+          file: src/Dockerfile
           push: true
           tags: Et3rnalDespa1r/cloudtask-hse-nis:latest
