--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Сборка и загрузка Docker-образа
 
 on:
   push:
@@ -9,19 +9,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Клонирование репозитория
+        uses: actions/checkout@v3  
 
-      - name: Log in to Docker Hub
+      - name: Вход в Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}  
+          password: ${{ secrets.DOCKER_PASSWORD }}  
 
-      - name: Build and push Docker image
+      - name: Сборка и загрузка Docker-образа
         uses: docker/build-push-action@v4
         with:
-          context: src
+          context: src  
           file: src/Dockerfile
-          push: true
-          tags: et3rnaldespair/cloudtask-hse-nis:latest
+          push: true 
+          tags: et3rnaldespair/cloudtask-hse-nis:latest 
